# nskit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_FIXES.md  Dockerfile  LICENSE  README.md  TESTING.md  Taskfile.yml  coverage.xml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  versions.json
.github/: dependabot.yml  pr-labeler.yaml  renovate.json
.github/workflows/: dependabot.yaml  pipeline.yaml  pr-labeler.yaml  release-management.yaml
0.1/: index.html
0.1.0/: 404.html  index.html  objects.inv
0.1.0/coverage/: covindex.html  d_00c8966864dd683d__logging_py.html  d_0207d0c09d8481b3___init___py.html  d_06480fa34cf1e1c6__logging_py.html  d_0c9afb1b4265921a_filesystem_object_py.html  d_0c9afb1b4265921a_folder_py.html  d_0c9afb1b4265921a_recipe_py.html  d_0e3a31c73f3bff86___init___py.html  d_12544a82e606c51e___init___py.html  d_12544a82e606c51e_mixins_py.html  d_12544a82e606c51e_sources_py.html  d_17927efa8428b3cb__logging_py.html  d_17927efa8428b3cb__version_py.html  d_1fe8c6d01251a5d0___init___py.html  d_1fe8c6d01251a5d0_repo_py.html  d_29c8a37a42ac606e_file_py.html  d_29c8a37a42ac606e_hook_py.html  d_29c8a37a42ac606e_license_file_py.html  d_29c8a37a42ac606e_recipe_py.html  d_2c6112dab289c279_api_py.html  d_2c6112dab289c279_package_py.html  d_332676ac5c493dc6_chdir_py.html  d_332676ac5c493dc6_test_extensions_py.html  d_34253b66b22bcd8a___init___py.html  d_36e4dc2e1d19a2a1_mixins_py.html  d_3f7b23e4d68d25bc_formatter_py.html  d_3f7b23e4d68d25bc_library_py.html  d_3f7b23e4d68d25bc_logger_py.html  d_3fcf47474d8d4d56___init___py.html  d_405bb00aa88613ba_utilities_py.html  d_42397f88fc884cf6___init___py.html  d_42397f88fc884cf6_json_py.html  d_445e71dcde8f23d7_repo_py.html  d_445e71dcde8f23d7_utilities_py.html  d_4e27830bb6f06927_mixins_py.html  d_5b7aebae0a35fa6e___init___py.html  d_5b7aebae0a35fa6e_pre_commit_py.html  d_5dc822ed6402981c_codebase_py.html  d_5dc822ed6402981c_namespace_validator_py.html  d_62216febe6d212c1___init___py.html  (+102 more)
0.1.0/developing/: index.html
0.1.0/search/: search_index.json
0.1.0/usage/: index.html
0.1.1/: 404.html  index.html
0.1.1/changelog/: index.html
0.1.1/coverage/: d_00c8966864dd683d___init___py.html  d_00c8966864dd683d__version_py.html  d_0152bcd96249368a___init___py.html  d_047de4e25b34d517___init___py.html  d_047de4e25b34d517_api_py.html  d_047de4e25b34d517_package_py.html  d_06480fa34cf1e1c6___init___py.html  d_06480fa34cf1e1c6__version_py.html  d_0c9afb1b4265921a___init___py.html  d_0c9afb1b4265921a_file_py.html  d_0c9afb1b4265921a_hook_py.html  d_0c9afb1b4265921a_license_file_py.html  d_17927efa8428b3cb___init___py.html  d_1fe8c6d01251a5d0_utilities_py.html  d_26f4517662cc0e9f___init___py.html  d_29c8a37a42ac606e___init___py.html  d_29c8a37a42ac606e_filesystem_object_py.html  d_29c8a37a42ac606e_folder_py.html  d_2c6112dab289c279___init___py.html  d_332676ac5c493dc6___init___py.html  d_332676ac5c493dc6_env_py.html  d_36e4dc2e1d19a2a1___init___py.html  d_36e4dc2e1d19a2a1_sources_py.html  d_3f7b23e4d68d25bc___init___py.html  d_3f7b23e4d68d25bc_config_py.html  d_405bb00aa88613ba___init___py.html  d_405bb00aa88613ba_repo_py.html  d_42397f88fc884cf6_toml_py.html  d_42397f88fc884cf6_yaml_py.html  d_445e71dcde8f23d7___init___py.html  d_4af381c545126b6a___init___py.html  d_4af381c545126b6a_abstract_py.html  d_4af381c545126b6a_azure_devops_py.html  d_4af381c545126b6a_github_py.html  d_4e27830bb6f06927___init___py.html  d_4e27830bb6f06927_sources_py.html  d_55442d24ef33de19___init___py.html  d_5985bc0a2520d7d7___init___py.html  d_5b7aebae0a35fa6e_git_py.html  d_5dc822ed6402981c___init___py.html  (+97 more)
0.1.1/developing/: index.html
0.1.1/search/: search_index.json
0.1.1/usage/: index.html
0.1.2/: 404.html  objects.inv
0.1.2/coverage/: d_00c8966864dd683d___init___py.html  d_047de4e25b34d517___init___py.html  d_047de4e25b34d517_package_py.html  d_06480fa34cf1e1c6___init___py.html  d_06480fa34cf1e1c6__logging_py.html  d_06480fa34cf1e1c6__version_py.html  d_0c9afb1b4265921a___init___py.html  d_0c9afb1b4265921a_file_py.html  d_0c9afb1b4265921a_filesystem_object_py.html  d_0c9afb1b4265921a_folder_py.html  d_0c9afb1b4265921a_hook_py.html  d_12544a82e606c51e_mixins_py.html  d_12544a82e606c51e_sources_py.html  d_17927efa8428b3cb___init___py.html  d_17927efa8428b3cb__version_py.html  d_1fe8c6d01251a5d0___init___py.html  d_1fe8c6d01251a5d0_repo_py.html  d_1fe8c6d01251a5d0_utilities_py.html  d_26f4517662cc0e9f___init___py.html  d_29c8a37a42ac606e___init___py.html  d_29c8a37a42ac606e_file_py.html  d_29c8a37a42ac606e_filesystem_object_py.html  d_29c8a37a42ac606e_folder_py.html  d_29c8a37a42ac606e_recipe_py.html  d_2c6112dab289c279_api_py.html  d_332676ac5c493dc6_chdir_py.html  d_34253b66b22bcd8a___init___py.html  d_36e4dc2e1d19a2a1_mixins_py.html  d_36e4dc2e1d19a2a1_sources_py.html  d_3f7b23e4d68d25bc_config_py.html  d_3f7b23e4d68d25bc_logger_py.html  d_405bb00aa88613ba___init___py.html  d_405bb00aa88613ba_repo_py.html  d_42397f88fc884cf6_json_py.html  d_42397f88fc884cf6_toml_py.html  d_42397f88fc884cf6_yaml_py.html  d_445e71dcde8f23d7___init___py.html  d_445e71dcde8f23d7_utilities_py.html  d_4af381c545126b6a_abstract_py.html  d_4af381c545126b6a_github_py.html  (+99 more)
0.1.2/search/: search_index.json
0.1/changelog/: index.html
0.1/coverage/: covindex.html  d_00c8966864dd683d__logging_py.html  d_00c8966864dd683d__version_py.html  d_0152bcd96249368a___init___py.html  d_0207d0c09d8481b3___init___py.html  d_047de4e25b34d517_api_py.html  d_0c9afb1b4265921a_license_file_py.html  d_0c9afb1b4265921a_recipe_py.html  d_0e3a31c73f3bff86___init___py.html  d_12544a82e606c51e___init___py.html  d_17927efa8428b3cb__logging_py.html  (+128 more)
1.1/: objects.inv
docs/: Dockerfile.demo-v2  demo-docker.tape  demo-local.tape  demo-update.tape  demo-yaml.tape  developers.md  developing.md  docker-execution.md  index.md  mkdocs.yml  usage.md
examples/: backend-docker.yml  backend-github.yml  backend-local.yml
main/: .coverage-tmp.html  404.html  index.html  objects.inv
taskfiles/: docs.yml  python-package.yml
tests/: conftest.py
(+336 files in other folders)
