[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nskit"
dynamic = ["version"]
authors = [{name = "David J Pugh", email="djpugh@gmail.com"}]
maintainers = [{ name = "David J Pugh", email="djpugh@gmail.com" }]
description = "Namespace Development Kit, providing a set of useful utilities for building software (in python namespaces)"
readme = {file="README.md", content-type = "text/markdown"}
keywords = []
requires-python = '>=3.9'
classifiers = [
        "Environment :: Console",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Intended Audience :: Developers",
    	"License :: OSI Approved :: MIT License",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
        "Natural Language :: English"
        # "Development Status :: 6 - Mature"
]
dependencies = [
    "aenum",
    "gitpython",
    "jinja2",
    "logzero",
    "orjson",
    "packaging",
    "pydantic[email]",
    "pydantic-settings>=2.2.0",
    # The issue highlighted in https://github.com/pydantic/pydantic-settings/issues/245 has been mitigated by a wrapper in nskit.common.configuration
    "python-dotenv",
    "pyyaml",
    "questionary",
    "rich",
    "ruamel.yaml",
    "tomlkit",
    "typer",
    'typing-extensions; python_version < "3.12"',
    'backports.entry-points-selectable; python_version < "3.10"',
    'eval_type_backport; python_version < "3.10"',
    'importlib_metadata; python_version < "3.11"',
    "virtualenv",
    "questionary>=2.1.0",
    "pre-commit>=4.0",
]


[project.optional-dependencies]
github = [
    "ghapi"
]

[dependency-groups]

lint = [
    "ruff>=0.1.0",
    "isort>=5.12.0",
]
security = [
    "bandit",
]
types = [
    "mypy",
    "lxml"
]
test= [
    "pytest>=7.3.1",
    "pytest-cov>=4",
    "pytest-subtests",
    "pytest-xdist",
    "hypothesis>=6.0.0",
    "coverage",
    ]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material",
    "mkdocs-git-authors-plugin",
    "mkdocs-coverage",
    "mkdocs-include-markdown-plugin",
    'mkdocs-github-changelog',
    "mkdocs-licenseinfo>=1.0.0",
    # "mkdocs-gen-files",
    # "mkdocs-literate-nav",
    "mike"
]
licenses = [
    # "licensecheck",  # disabled: pins attrs<24 which breaks nox
    # "pip-licenses",
]
build = [
    "build"
]

dev = [
    'importlib_metadata; python_version < "3.8"',
    "nox",
    'tomli; python_version < "3.11"',
    "pre-commit",
    "setuptools",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "types"},
    {include-group = "security"},
    {include-group = "licenses"},
    {include-group = "docs"},
    {include-group = "build"},
]


[project.urls]
homepage = "https://github.com/djpugh/nskit"
repository = "https://github.com/djpugh/nskit"
documentation = "https://djpugh.github.io/nskit"

[tool.pdm.version]
source = "scm"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["B", "F401", "F811"]  # test files

[tool.ruff.lint.isort]
known-first-party = ["nskit"]

[tool.coverage.run]
source = ["nskit"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
repository = "https://github.com/djpugh/nskit"

[project.scripts]
nskit = "nskit.cli:main"

[project.entry-points."nskit.recipes"]
python_package = "nskit.recipes.python.package:PackageRecipe"
python_api_service = "nskit.recipes.python.api:APIRecipe"
recipe = "nskit.recipes.recipe:RecipeRecipe"

[project.entry-points."nskit.vcs.providers"]
github = "nskit.vcs.providers.github:GithubSettings"

[project.entry-points."nskit.vcs.installers"]
python = "nskit.vcs.installer:PythonInstaller"

[project.entry-points."nskit.mixer.environment.factory"]
default = "nskit.mixer.utilities:_EnvironmentFactory.default_environment"

# [project.entry-points."nskit.mixer.environment.extensions"]

[tool.pdm.build]
includes = ["src/"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
overrides = [
  { module = [
    "virtualenv.*",
    "tox.*",
    "importlib_metadata.*",
    "nskit._version"
  ], ignore_missing_imports = true },
]
